--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,13 @@
 body {
 	padding: 0;
 	margin:0;
+	overflow-x:hidden;
 }
 canvas {
+	box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 	display: block;
-	margin: 0 auto;
+	margin: 0;
 	background-color: #ecf0f1;
-	border: 1px solid #000;
 }
